fix TextController